[metadata]
name = cqljupyter
version = 1.1.0
author = Brad Schoening, Steven Lowenthal & Apache Cassandra Developers
license = Apache
description = CQL kernel for Jupyter based on Cassandra CQLSH
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cql, cassandra
url = https://github.com/bschoening/cqljupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
packages = cqljupyter
install_requires = cqlsh; ipython; jupyter-client; notebook; cassandra-driver>=3.25
tests_require = jupyter_kernel_test
